# racist

./: Cargo.toml  build.rs  rustfmt.toml
examples/: sample.rs
kernels/: Cargo.toml  build.rs
kernels/simple/: Cargo.toml
kernels/simple/src/: bsdf.rs  inter.rs  lib.rs  light.rs  rng.rs  skybox.rs  util.rs  vec.rs
kernels/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: atlas.rs  att.rs  block.rs  bvh.rs  compute.rs  dev.rs  lib.rs  light.rs  main.rs  rendering.rs  scene.rs  tracer.rs
src/k/: post.wgsl
src/shapes/: mod.rs  plane.rs  prism.rs  sphere.rs  triangle.rs
