[package]
name = "racist"
version = "0.0.0"
edition = "2021"

[dependencies]
rand = { version = "0.8" }
rand_distr = { version = "0.4" }
rand_xorshift = { version = "0.3" }

image = { version = "0.25" }
indicatif = { version = "0.17" }
num-traits = { version = "0.2" }
rayon = { version = "1.5" }
crossbeam = { version = "0.8" }

nalgebra = { version = "0.32" }
