[package]
name = "racist"
version = "0.0.0"
edition = "2021"

[dependencies]
winit = "0.30"
rand = "0.8.5"
image = "0.25.0"
oneshot = "0.1.6"
bytemuck = "1.15.0"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
crossbeam-channel = "0.5.12"
wgpu = { version = "0.19", features = ["spirv"] }
glam = { version = "0.24", features = ["bytemuck"] }
gpgpu = { git = "https://github.com/UpsettingBoy/gpgpu-rs" }

shared = { path = "shared" }